Sat Mar 31 15:06:23 BST 2001 Olly Betts

	* Tidied up issues in omega with ammended $map and new $include.
	  Not tested, so there may still be issues...

Thu Mar 29 17:54:11 BST 2001  Richard Boulton <richard.boulton@omsee.com>

	* Fix parsequerytest to work with changed format for
	  OmQuery::get_description().

	* Add "using std::string" to parsequery.h, so queryparser compiles
	  on its own.

Mon Mar 19 17:46:36 GMT 2001  Richard Boulton <richard.boulton@omsee.com>

	* Fix omindex-config.cc to compile with STL port.  Now only complains
	  about issues to do with libxml.

Mon Mar 19 17:44:36 GMT 2001  Richard Boulton <richard.boulton@omsee.com>

	* Disable compilation of omindex-config, since it currently depends
	  on libxml2 which we have no configure checks for.  It should
	  probably only depend on libxml (1 or 2), anyway.

Mon Mar 19 16:03:21 GMT 2001  Richard Boulton <richard.boulton@omsee.com>

	* Use updated omsee.m4 macro.

Mon Mar 19 13:14:28 GMT 2001  Richard Boulton <richard.boulton@omsee.com>

	* Updated licenses, to include year 2001.

Sun Mar 18 12:59:36 GMT 2001  Richard Boulton <richard.boulton@omsee.com>

	* Some modifications to fix omega compilation to work with latest
	  version of the omsee API.

	* Some modifications towards getting omindex-config to compile with
	  libxml1: doesn't yet work.

Sat Mar 17 12:09:30 GMT 2001 Olly Betts

	* gui/glade/querygui.cc: Adding missing `#include <vector>'
	  which stops it compiling on freebsd.

Thu Feb 22 18:18:40 GMT 2001 Chris Emerson <chris.emerson@omsee.com>

	* Updated indexfile.xml after omregexfilter node output name change.

Thu Feb 22 12:55:00 GMT 2001 Mark Shinwell

	* omega: Initial commit of omindex-config.

Mon Feb 19 17:36:42 GMT 2001 Olly Betts

	* Removed RJB_FIND_STLPORT from configure.in and acinclude.m4 -
	  omsee-config should take care of whether stlport needs to be used
	  or not.

Fri Feb  2 16:34:26 GMT 2001  Richard Boulton <richard.boulton@omsee.com>
